crates/cctui-tui/src/snapshots/cctui__view_snapshots__conversation_sidebar_on_a_subagent.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 cctui-sub (main) on orion ── opus ── $1.25                       │ Todo
∴ thinking (2 lines)  (2 more · o)                               ▕│ no todo list yet
 Read  crates/cctui-tui/src/main.rs  read                        ▕│
└ 984 lines                                                      ▕│ Subagents
 Bash  cargo test  write                                         ▕│ no subagents
└ ✗ exit 101 · 3 failed  (2 more · o)                            ▐│
                                                                 ▐│ u up to cctui
● Assistant                                                      ▐│
Looking at the views first.                                      ▐│
                                                                 ▐│
- one                                                            ▐│
- two                                                            ▐│
⏱ 12.4k in / 1.1k out                                            ▐│
⏱ 38s                                                            ▐│
                                                                 ▐│
◆ lane-b                                                         ▐│
the parser lane is rebased                                       ▐│
· keep-alive tick                                                ▐│
⟳ context reset (/clear)                                         ▐│
                                                                 ▐│
◁ Reply done                                                     ▐│
──────────────────────────────────────────────────────────────────│
 ⠋ working                                                        │
❯  Type a message...                                              │
