crates/cctui-tui/src/snapshots/cctui__view_snapshots__conversation_two_permission_cards_stack.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 583
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25  ! 1 need input — Ctrl+g
Looking at the views first.                                                                        ▕
                                                                                                   ▕
- one                                                                                              ▕
- two                                                                                              ▕
⏱ 12.4k in / 1.1k out                                                                              ▕
⏱ 38s                                                                                              ▕
                                                                                                   ▐
◆ lane-b                                                                                           ▐
the parser lane is rebased                                                                         ▐
⟳ context reset (/clear)                                                                           ▐
                                                                                                   ▐
◁ Reply done                                                                                       ▐
┌ ⚠ Permission · Bash ─────────────────────────────────────────────────────────────────────────────┐
│ $ cargo test --workspace                                                                         │
└ y allow   n deny   A allow + auto-approve ───────────────────────────────────────────────────────┘
┌ ⚠ Permission · Edit ─────────────────────────────────────────────────────────────────────────────┐
│ src/main.rs                                                                                      │
│ 1 -let a = 1;                                                                                    │
│ 1 +let a = 2;                                                                                    │
└ y allow   n deny   A allow + auto-approve ───────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
