crates/cctui-tui/src/snapshots/cctui__view_snapshots__conversation_without_data.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 540
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25  ! 1 need input — Ctrl+g
No conversation data



















────────────────────────────────────────────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
