crates/cctui-tui/src/snapshots/cctui__view_snapshots__diagnose_panel.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $1.25 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Bookmarks  3 Overview   starred · live · dispatched  sort: activity ↓  group: status
   ┌ Diagnose ──────────────────────────────────────────────────────────────────────────────────┐
   │s-working                                                                                   │
   │server:                                                                                     │
▸  │status                             active                                                   │
   │account                            main                                                     │
   │account bound                      true                                                     │
   │machine last seen                  4s ago                                                   │
   │daemon report:                                                                              │
   │adapter                            claude-code                                              │
   │short                              6e189420                                                 │
   │effective_state [activity, 1s ago] {"verdict":"active/working","tempo":"active","state":"wo…│
   │last_hook_event [hook, undated]    — (no hook delivery seen)                                │
   │attach [attach, undated]           {"phase":"held","last_probe_alive":true,"last_probe_at_m…│
   │pty_output [pty, undated]          — (PTY capture not implemented)                          │
   │claude_socket [discovery, 0ms ago] {"path":"/tmp/cc-daemon-1000/ab/control.sock","live":tru…│
   │transcript [filesystem, undated]   — (no transcript pinned)                                 │
   │prompts [hook, undated]            — (no prompt state yet)                                  │
   │permission_mode [spawn, undated]   "yolo"                                                   │
   │ j/k Scroll  r Refresh  y Copy id  D/i Switch  Esc Close    16/18                           │
   └────────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
